--- a/package.json
+++ b/package.json
@@ -20,10 +20,22 @@
   "homepage": "https://github.com/husengs7/Tokyo-Flag-capturing-geogesser#readme",
   "dependencies": {
     "axios": "^1.11.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
+    "method-override": "^3.0.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "sanitize-html": "^2.17.0"
   }
 }
