--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "jest": "^30.1.3"
+    "jest": "^30.1.3",
+    "mongodb-memory-server": "^10.2.0",
+    "supertest": "^7.1.4"
   }
 }
