--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "jest": "^30.1.3",
+    "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^27.0.0",
     "mongodb-memory-server": "^10.2.0",
     "supertest": "^7.1.4"
   }
